--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PMS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Python Media Server</title>
 </head>
 <body>
-    <h1>Python Media Server</h1>
-
+    <h1>Welcome to the Python Media Server</h1>
+    <ul>
+        <li><a href="/data">Data Storage</a></li>
+        <li><a href="/music">Music Storage</a></li>
+        <li><a href="/tv">TV Storage</a></li>
+        <li><a href="/movies">Movies Storage</a></li>
+        <li><a href="/photos">Photos Storage</a></li>
+    </ul>
 </body>
 </html>
