--- a/templates/movies.html
+++ b/templates/movies.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Movies Storage</title>
 </head>
 <body>
-
+  <h1>Movies Storage</h1>
+  <table border="1">
+    <tr>
+      <th>Title</th>
+      <th>Director</th>
+      <th>Cast</th>
+      <th>Release Year</th>
+      <th>Genre</th>
+      <th>Rating</th>
+    </tr>
+    {% for row in rows %}
+      <tr>
+        <td>{{ row['title'] }}</td>
+        <td>{{ row['director'] }}</td>
+        <td>{{ row['cast'] }}</td>
+        <td>{{ row['release_year'] }}</td>
+        <td>{{ row['genre'] }}</td>
+        <td>{{ row['rating'] }}</td>
+      </tr>
+    {% endfor %}
+  </table>
 </body>
 </html>
