--- a/templates/photos.html
+++ b/templates/photos.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Photos Storage</title>
 </head>
 <body>
-
+  <h1>Photos Storage</h1>
+  <table border="1">
+    <tr>
+      <th>Name</th>
+      <th>Resolution</th>
+      <th>Location</th>
+      <th>Date Taken</th>
+      <th>Camera Model</th>
+    </tr>
+    {% for row in rows %}
+      <tr>
+        <td>{{ row['name'] }}</td>
+        <td>{{ row['resolution'] }}</td>
+        <td>{{ row['location'] }}</td>
+        <td>{{ row['date_taken'] }}</td>
+        <td>{{ row['camera_model'] }}</td>
+      </tr>
+    {% endfor %}
+  </table>
 </body>
 </html>
