--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         <li><a href="/tv">TV Storage</a></li>
         <li><a href="/movies">Movies Storage</a></li>
         <li><a href="/photos">Photos Storage</a></li>
+        <li><a href="/upload">Upload New File</a> </li>
     </ul>
 </body>
 </html>
