--- a/templates/music.html
+++ b/templates/music.html
@@ -9,20 +9,22 @@
   <table border="1">
     <tr>
       <th>Title</th>
-      <th>Artist</th>
       <th>Album</th>
+      <th>Artist</th>
       <th>Track Number</th>
       <th>Genre</th>
       <th>Year</th>
+      <th>Edit</th>
     </tr>
     {% for row in rows %}
       <tr>
         <td>{{ row['title'] }}</td>
-        <td>{{ row['artist'] }}</td>
         <td>{{ row['album'] }}</td>
+        <td>{{ row['artist'] }}</td>
         <td>{{ row['track_number'] }}</td>
         <td>{{ row['genre'] }}</td>
         <td>{{ row['year'] }}</td>
+        <td><a href="{{ url_for('edit_metadata', media_type='music', id=row['id']) }}">Edit</a></td>
       </tr>
     {% endfor %}
   </table>
